bug fixes: remove pseudo headers for http/1.1 client